# grpc_m

./: .gitignore  ReadMe.md
.github/workflows/: python.yaml
user_go/: generate.sh  go.mod  pyproject.toml  user_go.pb.go  user_go.proto  user_go_grpc.pb.go
user_go/python/: user_go_pb2.py  user_go_pb2_grpc.py
user_go/python/user_go/: user_go_pb2.py  user_go_pb2.pyi  user_go_pb2_grpc.py
